# GD-data-transfer

./: .gitignore  README.md  build.py  gddt.py  pyproject.toml  requirements.txt  settings-sample.ini  settings.ini
src/: gddt-gui.py  gddt.py  settings-sample.ini  settings.ini  transfersave.py
