[project]
name = "gddatatransfer"
version = "1.2.1"
dependencies = [
    "altgraph>=0.17.4",
    "packaging>=24.2",
    "pefile>=2023.2.7",
    "pillow>=11.1.0",
    "pyinstaller>=6.12.0",
    "pyinstaller-hooks-contrib>=2025.1",
    "setuptools>=75.8.0",
    "ttkthemes>=3.2.2",
    "ttkwidgets>=0.13.0",
    "tkinter-tooltip>=3.1.2",
]

[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"
